# kivygo

./: README.md  estrutura.txt  pyproject.toml
kivygo/: __init__.py
kivygo/behaviors/: hover.py
kivygo/transitions/: base.py
