[project]
name = "kivygo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "camera4kivy>=0.3.3",
    "future>=1.0.0",
    "kivy>=2.0.0",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pyzbar>=0.1.9",
    "requests>=2.32.5",
    "svg-path>=7.0",
    "svglib>=1.6.0",
    "svgwrite>=1.4.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Ensure setuptools includes package data
packages = ["kivygo"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.glsl", "*.ttf", "*.kv", "*.frag", "*.atlas", "*.pex", "*.bounds"]

[tool.setuptools.exclude-package-data]
"*" = ["Documentation/*", "images_example/*", "visual_editor/*", "examples/*"]