[project]
name = "kivygo"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "camera4kivy>=0.3.3",
    "future>=1.0.0",
    "kivy>=2.0.0",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pyzbar>=0.1.9",
    "requests>=2.32.5",
    "svg-path>=7.0",
    "svglib>=1.6.0",
    "svgwrite>=1.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["kivygo"]

[tool.hatch.build]
include = ["kivygo/"]

exclude = [
    "kivygo/Documentation/**",
    "kivygo/images_example/**",
    "kivygo/visual_editor/**",
    "kivygo/examples/**",
    "kivygo/images/**",
    "kivygo/icons/**",
]
